<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:stretchColumns="1"
             android:padding="5dip"
        >
    <TableRow>
        <TextView
                android:gravity="center_horizontal"
                android:text="@string/current_weather"
                android:textSize="34sp"
                android:layout_span="4"
                />
    </TableRow>
    <TableRow>
        <ImageView
                android:id="@+id/current_weather_image"
                android:layout_gravity="center"
                android:src="@drawable/undefine"
                />
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:stretchColumns="0"
                     android:layout_margin="5dip"
                >
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_temperature"
                        />
                <TextView
                        android:id="@+id/current_temperature"
                        android:text=""
                        android:textColor="#FCC600"
                        />
                <TextView
                        android:text="@string/temperature_units"
                        android:textColor="#FCC600"
                        android:layout_marginLeft="5dip"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:text="@string/current_wind"
                        />
                <TextView
                        android:id="@+id/current_wind"
                        android:text=""
                        android:textColor="#FCC600"
                        />
                <TextView
                        android:text="@string/wind_units"
                        android:textColor="#FCC600"
                        android:layout_marginLeft="5dip"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:text="@string/current_atmospheric_pressure"
                        />
                <TextView
                        android:id="@+id/current_atmospheric_pressure"
                        android:text=""
                        android:textColor="#FCC600"
                        />
                <TextView
                        android:text="@string/atmospheric_pressure_units"
                        android:textColor="#FCC600"
                        android:layout_marginLeft="5dip"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:text="@string/current_humidity"
                        />
                <TextView
                        android:id="@+id/current_humanity"
                        android:text=""
                        android:textColor="#FCC600"
                        />
                <TextView
                        android:text="@string/humidity_units"
                        android:textColor="#FCC600"
                        android:layout_marginLeft="5dip"
                        />
            </TableRow>
        </TableLayout>
    </TableRow>
    <TableRow>
        <TextView
                android:gravity="center_horizontal"
                android:text="@string/forecast"
                android:textSize="34sp"
                android:layout_span="4"
                />
    </TableRow>
    <TableRow>
        <ListView android:id="@+id/forecast"
                  android:layout_span="4"
                >
        </ListView>
    </TableRow>
</TableLayout>

